Added integration tests for all services

--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@plumier/jwt": "^1.0.1",
-    "@plumier/swagger": "^1.0.1",
-    "@plumier/typeorm": "^1.0.1",
+    "@plumier/jwt": "1.0.1-canary.22",
+    "@plumier/swagger": "1.0.1-canary.22",
+    "@plumier/typeorm": "1.0.1-canary.22",
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^9.0.2",
     "jsonwebtoken": "^8.5.1",
-    "plumier": "^1.0.1",
+    "plumier": "1.0.1-canary.22",
     "sqlite": "^4.0.22",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.32",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/supertest": "^2.0.11",
-    "@plumier/testing": "^1.0.1",
+    "@plumier/testing": "1.0.1-canary.22",
     "jest": "^26.6.3",
     "jwt-decode": "^3.1.2",
     "ts-jest": "^26.5.6",
