--- a/.env-example
+++ b/.env-example
@@ -3,10 +3,5 @@ PORT=8000
 # jwt secret key
 PLUM_JWT_SECRET=your jwt secret here
 
-# TypeORM configurations 
-# https://typeorm.io/#/using-ormconfig/using-environment-variables
-TYPEORM_CONNECTION = sqlite
-TYPEORM_DATABASE = :memory:
-TYPEORM_ENTITIES = src/**/*-*(entity|controller).*(ts|js)
-TYPEORM_SYNCHRONIZE = true
-TYPEORM_LOGGING = false
+# MongoDB uri
+PLUM_MONGODB_URI=mongodb://localhost:27017/change-me
