--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@plumier/jwt": "1.0.1-canary.27",
     "@plumier/swagger": "1.0.1-canary.27",
-    "@plumier/typeorm": "1.0.1-canary.27",
+    "@plumier/mongoose": "1.0.1-canary.27",
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.1",
@@ -20,7 +20,6 @@
     "plumier": "1.0.1-canary.27",
     "sqlite": "^4.0.22",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.32",
     "uuid-apikey": "^1.5.2"
   },
   "devDependencies": {
